--- a/modules/module-2.2.qmd
+++ b/modules/module-2.2.qmd
@@ -1,7 +1,9 @@
 ---
 title: "Module 2.2"
 subtitle: "Accessibility, Clarity and Interactivity"
-format: html
+format: 
+  html:
+    code-link: true
 highlight-style: atom-one
 execute:
   echo: true
