--- a/modules/module-5.2.qmd
+++ b/modules/module-5.2.qmd
@@ -1,7 +1,9 @@
 ---
 title: "Module 5.2"
-subtitle: "API Calls and Sliders"
-format: html
+subtitle: "Exploring Reactivity"
+format: 
+  html:
+    code-link: true
 highlight-style: atom-one
 execute:
   echo: true
@@ -15,21 +17,26 @@ execute:
 - Install [fredr](https://cran.r-project.org/web/packages/fredr/vignettes/fredr.html) and read about its basic usage
 - Install [ecm](https://cran.r-project.org/web/packages/ecm/ecm.pdf), which we will use to build our recession shading helper script
 - Install [shinyWidgets](https://dreamrs.github.io/shinyWidgets/) and familiarize yourself with its basic functions
-- We will be using [lubridate](https://lubridate.tidyverse.org/), which is part of the Tidyverse. So it should already be installed; but take some time to familiarize yourself with its basic purpose and functions. 
+- Start a new Shiny project for this lesson. Go to File, select New Directory and then Shiny App. Browse to where you want to save the app, give the directory a name and click Create Project. 
 :::
 
 ## Overview
 
+A fundmental concept in R Shiny is reactivity. Reactivity refers to the automatic responsiveness and dynamic behavior of the application based on user input and data changes. It allows the application to update and re-render specific parts of the user interface (UI) in response to changes in input values, data updates, or other reactive triggers.
 
-
-## App with a reactive API call and date parameters
+All Shiny apps have an element of reactivity. In a basic Shiny app like we say in the last module, reactivity occurs when user input is fed to the server function through functions like `renderPlot()` or `renderTable()`. But we might also want to add additional elements of reactivity by using reactive functions like `reactive()` or `observe()`. In this lesson, we are going to look at how to use the `reactive()` function to control two separate reactive inputs to a line chart: the indicator the user wishes to view and the date range that the way to view it for. Here is the app that we are going to be building:
 
 <iframe src="https://emmanuelteitelbaum.shinyapps.io/fred_app/" width="780" height="560" data-external="1"></iframe>
-
 
 ## Setup
 
 {{< video https://www.youtube.com/embed/wo9vZccmqwc title = 'fredr App set up'>}}
+
+In the setup portion of our we want to start by loading the packages we will need to build the app. For this app, we are going to be using the `fredr` package to download data pertaining to the overall health of the economy from the St. Louis Fed API (FRED). So here we will also set our FRED API key and assign the codes for the indicators that we want to download to objects. 
+
+Next, we will use the `as.Date()` function to set the start date of our line series to Januar 1, 1970 and the end date as today's date (system date). We will also create a list of variable names for our UI dropdown (`vars`) and relate them to the objects containing the indicator codes. 
+
+Finally, we are going to be using a helper function to generate recession shading for our charts. Scroll down to the bottom of this page to see the code for the helper function. Take this and save it in an R file and put it in your app folder. In this chunk, we are going to call it with the source function, e.g. `source(helper.R)`. 
 
 ```{r}
 #| label: setup
@@ -40,7 +47,6 @@ library(shiny)
 library(fredr)
 library(dplyr)
 library(ggplot2)
-library(lubridate)
 
 # Set Fred API key 
 fredr_set_key("YOUR FRED API KEY") 
@@ -67,12 +73,17 @@ vars <- c("Consumer Confidence" = cci,
 source("helper.R") # scroll down, code pasted below
 ```
 
-
-## ui
+## UI
 
 {{< video https://www.youtube.com/embed/wo9vZccmqwc title = 'fredR App user interface (UI)'>}}
 
-Define UI for application that draws a line chart
+Now we can get started on developing the UI for our app. For this app, we are going to have a title panel and two main display elements. The first is a panel where the user can select the indicator that they want to chart and the second is a plot with a slider where users can select the years they want to view. So let's divide the UI into two sections using the `fluidRow()` and `column()` 
+
+The `fluidRow()` function creates horizontal containers while the `column()` function is used to create vertical containers. Since we our app is going to display a single row, we will have just one `fluidRow()` call. Then we can divide that row into two columns using the `column()` function. The first argument in `column()`is the column width. Since column widths in Shiny are based on the Boots Bootstrap 12-wide grid system, our column widths must add up to 12. So let's make our panel for selecting the indicator 4 units wide and the area where we will display the plot 8 units wide. 
+
+From there, we can define the panel as a `wellPanel()` to give it an inset look and a grey background. We include `selectInput()` to get our dropdown where users can select an indicator from the `vars` list. Let's also use the `helpText()` function to display some instructions regarding how to use the app. 
+
+For the main display section, we are going to have our plot out along with the slider input. We are going to call this input "range" and leave the label blank. Then we need to define a min value, a max value and a range for the slider. For `min` and `max`, we will use `start_date` and `end_date`, which we defined earlier in the setup and the combination of these to define the range (`value`). Then we set `width` to 100% because we want the slider to expand to fit the entire width of the plot. `  
 
 ```{r}
 #| label: ui
@@ -85,8 +96,8 @@ ui <- fluidPage(
     
     fluidRow(
       
-      # 12 columns on one row: this panel will take 1/4 of it
-      column(3, wellPanel(
+      # 12 columns on one row: this panel will take 1/3 of it
+      column(4, wellPanel(
         selectInput("indicator", "Indicator:", vars)
         ),
       helpText("Select an indicator, choose a date range and view the trend. 
@@ -96,15 +107,15 @@ ui <- fluidPage(
                lead composite indicators are OECD data downloaded through FRED.")
       ), 
       
-      # Remaining 3/4 occupied by plot
+      # Remaining 2/3 occupied by plot
       column(8,
         plotOutput("lineChart"),     
         sliderInput(
           "range",
           "",
-          min = my("01-1970"),
-          max = today(), 
-          value = c(my("01-1970"), today()), 
+          min = start_date,
+          max = end_date, 
+          value = c(start_date, end_date), 
           width = "100%"
         )
       )
@@ -117,7 +128,11 @@ ui <- fluidPage(
 
 {{< video https://www.youtube.com/embed/wo9vZccmqwc title = 'fredR App Server'>}}
 
-Define server logic required to draw a histogram.
+For our server function, we are going to define two separate `reactive()` functions. This is how we are going to dynamically update the plot based on two different user inputs. First, we will define an input for the indicator where `input$indicator` takes the user input from the dropdown menu to perform a fresh API call whenever the selected indicator changes. Then, we take that input and filter it based on the input from the slider, e.g. `input$range`. Then we render the plot based on these updated data. 
+
+Notice that whenever we want to use the stored data from the reactive calls we need to add parentheses after the objects, e.g. `fred_indicator()` in the second reactive function or `fred_data()` in the `ggplot` call. This is to ensure that the reactive expression is evaluated and its current value is used as the input data for the plot. 
+
+Finally, we are going to use the `add_rec_shade()` helper function to add the recession shading to the chart. We again use the inputs from the two reactive functions to define the start date and end date of the shading as well as the y-min and y-max values of the shaded rectangles.
 
 ```{r}
 #| label: server
@@ -137,7 +152,7 @@ server <- function(input, output) {
     # Only updates when user selects new data range
     fred_data <- reactive({
       fred_indicator() |>
-      filter(date %in% (input$range[1]:input$range[2]))
+      filter(between(date, input$range[1],input$range[2])) 
    })
 
     # Render line chart
@@ -164,6 +179,8 @@ server <- function(input, output) {
 
 ## Call to Shiny app
 
+Once we have our UI and server functions defined we are ready to go. But don't forget to include the call to the Shiny app or the app won't run! Once this is in place, you can click "Run App" in the RStudio IDE to view the app locally. Optionally, right now, you can try setting up an account on [shinyapps.io](https://www.shinyapps.io/) and try publishing your app on their server. 
+
 ```{r}
 #| label: call_shiny
 #| eval: false
@@ -177,10 +194,9 @@ server <- ...
 shinyApp(ui = ui, server = server)
 ```
 
-
 ## Helper script
 
-Helper script for shaded recession rectangles. Save in a file called `helper.R` in same folder as your `app.R` file. See [this post](https://rpubs.com/FSl/609471) for more details. 
+This is the helper script for shaded recession rectangles. Save in a file called `helper.R` in same folder as your `app.R` file. See [this post](https://rpubs.com/FSl/609471) for more details. 
 
 ```{r}
 #| label: helper_script
